--- a/txngraphs/Cargo.toml
+++ b/txngraphs/Cargo.toml
@@ -7,4 +7,6 @@ edition = "2024"
 alloy-primitives = "1.2.1"
 anyhow = "1.0.98"
 petgraph = "0.8.2"
-polars = { version = "0.49.1", features = ["polars-io"] }
+polars = { version = "0.49.1", features = ["polars-io", "lazy"] }
+tracing = "0.1.41"
+tracing-subscriber = "0.3.19"
