--- a/txngraphs/Cargo.toml
+++ b/txngraphs/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2024"
 [dependencies]
 alloy-primitives = "1.2.1"
 anyhow = "1.0.98"
+clap = {version = "4.5.41", features = ["derive"]}
 petgraph = "0.8.2"
 polars = { version = "0.49.1", features = ["polars-io", "lazy"] }
 tracing = "0.1.41"
