--- a/txngraphs/Cargo.toml
+++ b/txngraphs/Cargo.toml
@@ -14,7 +14,7 @@ cryo_freeze = "0.3.2"
 graphviz-rust = "0.9.1"
 petgraph = { version = "0.8.2", features = ["graphmap"] }
 polars = { version = "0.36.2", features = ["polars-io", "lazy"] }
-tokio = { version = "1.47.1", features = ["macros", "rt"] }
+tokio = { version = "1.47.1", features = ["full", "macros", "rt"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 zerocopy = "0.8.26"
@@ -34,3 +34,7 @@ reth-node-ethereum = { path = "../../temp_repos/reth/crates/ethereum/node" }
 [[example]]
 name = "dune_dex"
 path = "src/examples/dune_dex.rs"
+
+[[example]]
+name = "benchmark"
+path = "src/examples/benchmark.rs"
