--- a/txngraphs/Cargo.toml
+++ b/txngraphs/Cargo.toml
@@ -14,7 +14,6 @@ cryo_freeze = "0.3.2"
 graphviz-rust = "0.9.1"
 petgraph = { version = "0.8.2", features = ["graphmap"] }
 polars = { version = "0.36.2", features = ["polars-io", "lazy"] }
-tokio = { version = "1.47.1", features = ["full", "macros", "rt"] }
 tracing = "0.1.41"
 tracing-subscriber = "0.3.19"
 zerocopy = "0.8.26"
@@ -30,6 +29,9 @@ reth-db = { path = "../../temp_repos/reth/crates/storage/db" }
 reth-provider = { path = "../../temp_repos/reth/crates/storage/provider" }
 reth-node-types = { path = "../../temp_repos/reth/crates/node/types" }
 reth-node-ethereum = { path = "../../temp_repos/reth/crates/ethereum/node" }
+futures = "0.3.31"
+rayon = "1.11.0"
+tokio = { version = "1.47.1", features = ["full"] }
 
 [[example]]
 name = "dune_dex"
